--- a/src/assets/scss/base/_index.scss
+++ b/src/assets/scss/base/_index.scss
@@ -2,6 +2,24 @@
 
 * {
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+
+html, body {
+    background-color: $bg;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    margin: 0;
+}
+
+#root {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .input {
