Feat: Complete age calculator and style for mobile

--- a/src/assets/scss/components/_info.scss
+++ b/src/assets/scss/components/_info.scss
@@ -7,6 +7,7 @@
         word-spacing: -2%;
         color: $black;
         margin: 0;
+        white-space: nowrap;
 
         span {
             color: $purple;
