--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -30,4 +30,44 @@ button {
     border-radius: 100%;
     border: none;
     outline: none;
+    cursor: pointer;
+    transition: background-color 0.7s ease;
+
+    &:hover {
+        background-color: $black;
+    }
+
+    img {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
+}
+
+@include respond-to(xxl) {
+    form {
+        width: 52.5rem;
+        height: 40.6875rem;
+        border-radius: 1.5rem 1.5rem 12.5rem 1.5rem;
+        align-items: start;
+        padding: 3.5rem;
+
+        .inputs {
+            gap: 2rem;
+            padding: 0 0 2.96875rem 0;
+            width: 100%;
+        }
+    }
+
+    button {
+        height: 6rem;
+        width: 6rem;
+        left: auto;
+        right: 0.3125rem;
+        top: 32.5%;
+
+        img {
+            width: 2.75rem;
+            height: 2.75rem;
+        }
+    }
 }
